<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<EditText
    android:id="@+id/editText1"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:background="@drawable/rounded_corner"
    android:textColorHint="#FFFFFF"
    android:textColor="#FFFFFF"
    android:hint="TYPE TODO.."/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/imageView1"
        android:background="@mipmap/plus"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
    />
</RelativeLayout>